# eye-of-sauron

./: .gitignore  CMakeLists.txt  LICENSE  platformio.ini
lib/StepperDriver/examples/MultiAxis/: MultiAxis.ino
lib/StepperDriver/src/: A4988.cpp  A4988.h  BasicStepperDriver.cpp  BasicStepperDriver.h
src/: CMakeLists.txt  main.c  motorControl.c  motorControl.h  servoControl.c  servoControl.h  stepper_wrapper.cpp  stepper_wrapper.h  taskMan.h  templateSvc.c  templateSvc.h
src/commsSvc/: commsSvc.c  commsSvc.h  joystick.c  joystick.h
src/gimbalControlSvc/: gimbalControlSvc.c  gimbalControlSvc.h  servoControl.c  servoControl.h  stepperControl.c  stepperControl.h
test/: CMakeLists.txt  test_servoControl.c
